修改相应配置，使能够打成war包部署至远程tomcat服务器

--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.lihengming</groupId>
-    <artifactId>spring-boot-api-project-seed</artifactId>
+    <artifactId>spring-boot-bill</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
+    <!--<packaging>jar</packaging>-->
 
     <properties>
         <java.version>1.8</java.version>
@@ -102,6 +103,13 @@
             <version>1.3.5</version>
             <scope>test</scope>
         </dependency>
+
+        <!--打成war包部署到外部tomcat服务器需引用spring-boot-starter-tomcat的依赖-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
